# yay

./: Cargo.toml  LICENSE  Makefile  README.md
.github/template/: template.yml
.github/workflows/: main.yml  pull-request.yml
src/: db.rs  lib.rs  utils.rs  workload.rs
src/generator/: acknowledge.rs  constant.rs  counter.rs  discrete.rs  mod.rs  sequential.rs  uniform.rs
