[package]
name = "yay"
version = "0.0.0"
edition = "2021"
authors = ["MrCroxx <mrcroxx@outlook.com>"]
description = "Yet another YCSB workload generator in Rust."
license = "MIT"
repository = "https://github.com/mrcroxx/yay"
homepage = "https://github.com/mrcroxx/yay"
rust-version = "1.65"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
anyhow = "1"
itertools = "0.13"
parking_lot = "0.12"
paste = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
